[gd_scene load_steps=5 format=3 uid="uid://txb5ar0yw8go"]

[ext_resource type="Script" path="res://Tutorial/tutorial_menu.gd" id="1_6xgxm"]
[ext_resource type="Texture2D" uid="uid://df3sdcq35idko" path="res://assets/backgrounds/background3.png" id="2_absii"]
[ext_resource type="Texture2D" uid="uid://brgyjbw0y2a18" path="res://resources/keyboard/letter_space.tres" id="3_xvrdp"]
[ext_resource type="Texture2D" uid="uid://c6bir8suabki0" path="res://resources/keyboard/letter_esc.tres" id="4_wn5wi"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6xgxm")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -72.0
offset_right = 157.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_absii")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Welcome!"
horizontal_alignment = 1

[node name="SpaceToBegin" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/SpaceToBegin"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Press"
horizontal_alignment = 1

[node name="LetterSpace" type="TextureRect" parent="HBoxContainer/VBoxContainer/SpaceToBegin"]
layout_mode = 2
texture = ExtResource("3_xvrdp")
stretch_mode = 3

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/SpaceToBegin"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "for tutorial."

[node name="EscToStart" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/EscToStart"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Or"
horizontal_alignment = 1

[node name="LetterSpace" type="TextureRect" parent="HBoxContainer/VBoxContainer/EscToStart"]
layout_mode = 2
texture = ExtResource("4_wn5wi")
stretch_mode = 3

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/EscToStart"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "to start playing."
